<resources>
    <string name="app_name">MobileAssignment</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_homepage">Homepage</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="news">News</string>
    <string name="customer">Customer</string>
    <string name="feedback">Feedback</string>
    <string name="title_activity_customer_details">CustomerDetails</string>
    <string name="cpy">Company</string>
    <string name="add">Address</string>
    <string name="ad">Address</string>
    <string name="egadd">No.42 Jln Malinja TBR KL</string>
    <string name="getDirect">Get Direction</string>
    <string name="cpyPhone">Company Phone</string>
    <string name="egPhone">03-3456789</string>
    <string name="repre">Representative</string>
    <string name="egrep">Lee Jia Yi</string>
    <string name="contactNo">Contact No</string>
    <string name="contact">016-1234567</string>
    <string name="pos">Position</string>
    <string name="egpos">Manager</string>
    <string name="email">Email</string>
    <string name="egmail">testing@hotmail.com</string>
    <string name="pchHistory">Purchase History</string>
    <string name="view">View Feedback</string>
    <string name="send">Send Feedback</string>
    <string name="get_course_url">http://xladious.netau.net/select_customer.php</string>
    <string name="get_history_url">http://xladious.netau.net/select_history.php</string>
    <string name="id">Id</string>
    <string name="title_activity_send_case">sendCase</string>

    <string name="title_activity_customer">Customer</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_main1">MainActivity1</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_main3">MainActivity3</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_client_menu">ClientMenu</string>
    <string name="title_activity_purchase_history">Purchase History</string>
    <string name="purchaseHistory">Purchase History</string>
    <string name="orderno">Order No:</string>
    <string name="productname">Product Name:</string>
    <string name="productqty">Product Quantity:</string>
</resources>
