<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_customer_details"
    tools:context="com.example.jia.mobileassignment.CustomerDetails">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/cpy"
        android:id="@+id/textViewCompany"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/textViewDis1"
        android:layout_below="@+id/textViewCompany"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egadd"
        android:id="@+id/textViewAdd"
        android:layout_below="@+id/textViewDis1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/getDirect"
        android:id="@+id/btnDirection"
        android:background="#000000"
        android:textColor="#ffffff"
        android:layout_below="@+id/textViewCompany"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpyPhone"
        android:id="@+id/textViewDis2"
        android:layout_below="@+id/btnDirection"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egPhone"
        android:id="@+id/textViewPhone"
        android:layout_below="@+id/textViewDis2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repre"
        android:id="@+id/textViewDis3"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/textViewPhone"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egrep"
        android:id="@+id/textViewRepresentative"
        android:layout_below="@+id/textViewDis3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contactNo"
        android:id="@+id/textViewDis4"
        android:layout_below="@+id/textViewRepresentative"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:id="@+id/textViewContact"
        android:layout_below="@+id/textViewDis4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos"
        android:id="@+id/textViewDis5"
        android:layout_below="@+id/textViewContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egpos"
        android:id="@+id/textViewPost"
        android:layout_below="@+id/textViewDis5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:id="@+id/textViewDis6"
        android:layout_below="@+id/textViewPost"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:textSize="16dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/egmail"
        android:id="@+id/textViewEmail"
        android:layout_below="@+id/textViewDis6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pchHistory"
        android:id="@+id/button4"
        android:layout_alignBottom="@+id/textViewEmail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#000000"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:id="@+id/btnViewFeedback"
        android:layout_marginTop="46dp"
        android:layout_below="@+id/textViewEmail"
        android:layout_toRightOf="@+id/textViewDis6"
        android:layout_toEndOf="@+id/textViewDis6"
        android:background="#ff0000"
        android:textColor="#ffffff" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send"
        android:id="@+id/btnSendFeedback"
        android:background="#ff0000"
        android:layout_alignTop="@+id/btnViewFeedback"
        android:layout_toRightOf="@+id/btnViewFeedback"
        android:layout_toEndOf="@+id/btnViewFeedback"
        android:layout_marginLeft="29dp"
        android:layout_marginStart="29dp"
        android:textColor="#ffffff" />
</RelativeLayout>
