<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_login_menu"
    tools:context="com.example.jia.mobileassignment.LoginMenu">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="197dp"
        android:id="@+id/frameLayout">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView3"
            android:src="@drawable/sales"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_centerVertical="true"
        android:layout_alignRight="@+id/frameLayout"
        android:layout_alignEnd="@+id/frameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:textColor="#010101"
        android:visibility="visible"
        android:singleLine="true"
        android:hint="@string/username" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="37dp"
        android:layout_alignLeft="@+id/editText2"
        android:layout_alignStart="@+id/editText2"
        android:layout_alignRight="@+id/editText2"
        android:layout_alignEnd="@+id/editText2"
        android:gravity="center"
        android:textColor="#000000"
        android:visibility="visible"
        android:singleLine="true"
        android:password="true"
        android:hint="@string/password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:id="@+id/button"
        android:layout_marginTop="39dp"
        android:background="#ff0000"
        android:textColor="#ffffff"
        android:layout_below="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:onClick="doClick" />

</RelativeLayout>
